mypyc/test-data/run-base64.test
[case testAllBase64Features_librt_base64_experimental]
from typing import Any

from librt.base64 import b64encode

from testutil import assertRaises


def test_encode_basic() -> None:
    assert b64encode(b"x") == b"eA=="

    with assertRaises(TypeError):
        b64encode(bytearray(b"x"))


def test_encode_wrapper() -> None:
    enc: Any = b64encode
    assert enc(b"x") == b"eA=="

    with assertRaises(TypeError):
        enc()

    with assertRaises(TypeError):
        enc(b"x", b"y")

[case testBase64FeaturesNotAvailableInNonExperimentalBuild_librt_base64]
# This also ensures librt.base64 can be built without experimental features
import librt.base64

def test_b64encode_not_available() -> None:
    assert not hasattr(librt.base64, "b64encode")
